# ML-Regression-End2End-AWS

./: .env.template  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.train  README.md  housing-api-task-def.json  pyproject.toml  train_entrypoint.sh  training-task-def.json
.github/workflows/: deploy.yml
configs/: app_config.yml  ge_expectations.yml  mlflow_config.yml
models/: xgb_model.pkl
scripts/: build_and_push.sh  deploy_ec2.sh  deploy_to_ec2.ps1  deploy_to_ec2.sh  download_models.sh  quickstart.sh  setup_aws_credentials.ps1  setup_s3_integration.ps1  verify_aws_setup.py
src/api/: main.py
src/batch/: run_monthly.py
src/feature_pipeline/: load.py
src/inference_pipeline/: inference.py
src/training_pipeline/: train.py  tune.py
terraform/: build_lambda.ps1  build_lambda.sh  lambda_trigger.py  main.tf  terraform.tfvars.example  user_data.sh
tests/: data_quality.py  test_training.py
