[project]
name = "housing-regression-mle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.33",
    "category-encoders>=2.8.1",
    "fastapi>=0.116.1",
    "great-expectations==1.5.8",
    "matplotlib>=3.10.5",
    "mlflow>=3.3.1",
    "numpy==1.26.4",
    "optuna>=4.5.0",
    "pandas==2.1.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.30.0",
    "xgboost==3.0.4",
]
